# nya-exif

./: .gitignore  Cargo.toml  README.md  README_en.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/core/: app.rs  cli.rs  mod.rs
src/exif_writer/: exiftool.rs  mod.rs
src/location_reader/: life_path.rs  mod.rs
src/util/: file.rs  location.rs  mod.rs
